


set(SFCORE_LIB_FILES
  	Component/SFUnhandledExceptionHandlerComponent.cpp
	Container/SFCircularBuffer.cpp
	Container/SFCircularBufferQueue.cpp
	Container/SFStackPool.cpp
	IO/AsyncIO/AsyncIOAdapter.cpp
	IO/AsyncIO/AsyncIOPort.cpp
	IO/AsyncIO/AsyncIOPortSystemImpl.cpp
	IO/AsyncIO/AsyncIOPortWriteBufferQueue.cpp
	IO/AsyncIO/AsyncIOPort_EPOLL.cpp
	IO/AsyncIO/AsyncIOPort_IOCP.cpp
	IO/AsyncIO/AsyncIOPort_KQUEUE.cpp
	IO/AsyncIO/AsyncIOPort_Reactor.cpp
	IO/SFFile.cpp
	IO/SFFile.linux.cpp
	IO/SFFile.win32.cpp
	IO/SFFileInputStream.cpp
	IO/SFFileOutputStream.cpp
	IO/SharedMemory/SFSharedMemory.cpp
	IO/SharedMemory/SFSharedMemory_linux.cpp
	IO/SharedMemory/SFSharedMemory_win.cpp
	Math/SF3DMath.cpp
	Math/SF3DMathSSE.cpp
	Memory/SFHeapMemory.cpp
	Memory/SFHeapTree.cpp
	Memory/SFIMemoryManager.cpp
	Memory/SFMemory.cpp
	Memory/SFMemoryManager.cpp
	Memory/SFMemoryPool.cpp
	Object/SFLibraryComponent.cpp
	Object/SFObjectPool.cpp
	Object/SFObject.cpp
	Object/SFObjectManager.cpp
	Object/SFSharedObject.cpp
	Object/SFSharedObjectManager.cpp
	Platform/Android/SFifaddrs.cpp
	Platform/SFNativeWindow.cpp
	Platform/StackWalker.cpp
	Script/Tong/SFTongScriptBytecode.cpp
	Script/Tong/SFTongScriptContext.cpp
	Script/Tong/SFTongScriptEnvironment.cpp
	Script/Tong/SFTongScriptEngine.cpp
	Script/Tong/SFTongScriptFunction.cpp
	Script/Tong/SFTongScriptVariable.cpp
	Service/SFScriptService.cpp
	Service/SFService.cpp
	SFNetAddress.cpp
	SFTypedefs.cpp
	Stream/SFCompressedStream.cpp
	Stream/SFMemoryStream.cpp
	Task/SFAsyncTaskManager.cpp
	Task/SFTask.cpp
	Task/SFTimerScheduler.cpp
	Thread/SFSynchronization.cpp
	Thread/SFThread.cpp
	Util/SFCryptoBase64.cpp
	Util/SFCryptoCrc32.cpp
	Util/SFCryptoCrc32C.cpp
	Util/SFCryptoCrc64.cpp
	Util/SFCryptoSHA.cpp
	Util/SFLog.cpp
	Util/SFLogComponent.cpp
	Util/SFPath.cpp
	Util/SFRandom.cpp
	Util/SFTimeUtil.cpp
	Util/SFUniqueIDGenerator.cpp
	Util/SFUtility.cpp
	Variable/SFNamedVariableBox.h
	Variable/SFNamedVariableBox.cpp
	Variable/SFVariable.cpp
	Variable/SFVariableBoxing.cpp
	Variable/SFVariableStack.cpp
	Variable/SFVariableTable.cpp
	Variable/SFVariableSerialization.h
	Variable/SFVariableFactoryService.h
	Variable/SFVariableFactoryService.cpp
	Variable/SFVariable.h
	Variable/SFVariableBoxing.h
	Variable/SFVariableMapBuilder.h
	Variable/SFVariableStack.h
	Variable/SFVariableTable.h
	Variable/SFVariableToString.h
	Variable/SFVariableToString.cpp
  	Component/SFUnhandledExceptionHandlerComponent.h
	Container/SFCircularBuffer.h
	Container/SFCircularBufferQueue.h
	Container/SFCircularPageQueue.h
	Container/SFCircularQueue.h
	Container/SFCircularQueue.inl
	Container/SFContainerTrait.h
	Container/SFContainerTraitBase.h
	Container/SFDoubleLinkedList.h
	Container/SFDoubleLinkedListBase.h
	Container/SFDualSortedMap.h
	Container/SFHashTable.h
	Container/SFHashTable2.h
	Container/SFIndexing.h
	Container/SFOrderedLinkedList.h
	Container/SFPageQueue.h
	Container/SFPageQueue.inl
	Container/SFArray.h
	Container/SFArraySerialization.h
	Container/SFSortedSet.h
	Container/SFSortedArray.h
	Container/SFSortedMap.h
	Container/SFSpinBuffer.h
	Container/SFSpinBufferMT.h
	Container/SFSpinSharedBuffer.h
	Container/SFStackPool.h
	Container/SFStaticDoubleLinkedList.h
	Container/SFStaticHashTable.h
	Container/SFStaticLinkedList.h
	Platform/Android/SFifaddrs.h
	SFCorePCH.h
	IO/AsyncIO/AsyncIOAdapter.h
	IO/AsyncIO/AsyncIOPort.h
	IO/AsyncIO/AsyncIOPortSystemImpl.h
	IO/AsyncIO/AsyncIOPortWriteBufferQueue.h
	IO/AsyncIO/AsyncIOPort_EPOLL.h
	IO/AsyncIO/AsyncIOPort_IOCP.h
	IO/AsyncIO/AsyncIOPort_KQUEUE.h
	IO/AsyncIO/AsyncIOPort_Reactor.h
	IO/SFFile.h
	IO/SFFileInputStream.h
	IO/SFFileOutputStream.h
	IO/SharedMemory/SFSharedMemory.h
	Math/SF3DMath.h
	Math/SF3DMathSoft.h
	Math/SF3DMathSSE.h
	Math/SFAngle.h
	Math/SFMath.h
	Math/SFMathConsts.h
	Math/SFMathTypes.h
	Math/SFMathUtil.h
	Memory/SFHeapMemory.h
	Memory/SFHeapTree.h
	Memory/SFIMemoryManager.h
	Memory/SFCircularHeap.h
	Memory/SFMemory.h
	Memory/SFMemoryManager.h
	Memory/SFMemoryPool.h
	Memory/SFStackHeap.h
	Object/SFLibraryComponent.h
	Object/SFLibraryComponentAdapter.h
	Object/SFLibraryComponentManager.h
	Object/SFObjectPool.h
	Object/SFObject.h
	Object/SFObjectManager.h
	Object/SFSharedObject.h
	Object/SFSharedPointer.h
	Object/SFSharedObjectManager.h
	Platform/SFNativeWindow.h
	Platform/StackWalker.h
	Platform/StackWalkerComponent.h
	ResultCode/SFResultCodeLibrary.h
	ResultCode/SFResultCodeSystem.h
	Script/Tong/SFTongScriptBytecode.h
	Script/Tong/SFTongScriptContext.h
	Script/Tong/SFTongScriptBytecodeOpCode.h
	Script/Tong/SFTongScriptEnvironment.h
	Script/Tong/SFTongScriptEngine.h
	Script/Tong/SFTongScriptFunction.h
	Script/Tong/SFTongScriptVariable.h
	Service/SFAsyncIOPortService.h
	Service/SFLogService.h
	Service/SFScriptService.h
	Service/SFService.h
	Service/SFServices.h
	SFAssert.h
	SFResult.h
	SFTypedefs.h
	Stream/SFCompressedStream.h
	Stream/SFMemoryStream.h
	Stream/SFStream.h
	String/SFStringCrc64.h
	String/SFStringCrc32.h
	String/SFStringCrcDB.h
	String/SFHasher32.h
	String/SFHasher32C.h
	String/SFHasher64.h
	String/SFPathString.h
	String/SFString.h
	String/SFStrFormat.h
	String/SFStrParserUtil.h
	String/SFStringSerialization.h
	String/SFStrUtil.h
	String/SFToString.h
	String/SFToStringBase.h
	String/SFStringCrc64.cpp
	String/SFStringCrcDB.cpp
	String/SFPathString.cpp
	String/SFString.cpp
	String/SFStrParserUtil.cpp
	String/SFStrUtil.cpp
	String/SFToString.cpp
	String/SFToStringBase.cpp

	Task/SFAsyncTaskManager.h
	Task/SFTask.h
	Task/SFTimerScheduler.h
	Task/SFTimerSchedulerAction.h
	Thread/SFSynchronization.h
	Thread/SFSystemSynchronization.h
	Thread/SFThread.h
	Util/SFLog.h
	Util/SFLogComponent.h
	Util/SFPath.h
	Util/SFRandom.h
	Util/SFTimeUtil.h
	Util/SFUniqueIDGenerator.h
	Util/SFUtility.h
	Container/SFCircularPageQueue.inl
	Container/SFDualSortedMap.inl
	Container/SFArray.inl
	Container/SFSortedArray.inl
	Container/SFSortedMap.inl
	Container/SFSpinBuffer.inl
	Container/SFSpinBufferMT.inl
	Container/SFSpinSharedBuffer.inl
	Container/SFStackPool.inl
	Math/SF3DMathSoft.inl
	Math/SF3DMath_matrixSoft.inl
	Math/SF3DMath_quaternionSoft.inl
	Math/SF3DMath_vectorSoft.inl
	Math/SFAngle.inl
	Math/SFMath.inl
	String/SFHashCRC32Table.inl
	String/SFStrUtil.inl
	Thread/SFSynchronization.inl
	Thread/SFSystemSynchronize_win.inl
	Thread/SFThread.inl
	Util/SFRandom.inl
	Util/SFTimeUtil.inl
	Util/SFUtility.inl
	Container/SFSortedSet.inl

  )




include_directories(./)



add_library(SFCore STATIC ${SFCORE_LIB_FILES})

target_include_directories (SFCore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

install (TARGETS SFCore
         ARCHIVE DESTINATION lib COMPONENT StormForge
         LIBRARY DESTINATION lib COMPONENT StormForge
         RUNTIME DESTINATION bin COMPONENT StormForge)


